[gd_scene load_steps=7 format=3 uid="uid://buyuxwftqvuul"]

[ext_resource type="Script" path="res://FPS.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://cg6l35p4lhyp" path="res://Shoot.wav" id="2_wrqnx"]
[ext_resource type="AudioStream" uid="uid://cfu46kuli276s" path="res://ShootAlt.wav" id="3_5higm"]
[ext_resource type="AudioStream" uid="uid://2w31o3d36qxc" path="res://Death1.wav" id="3_7hyqs"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="CapsuleMesh" id="2"]

[node name="FPS" type="CharacterBody3D"]
script = ExtResource("1")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1.1, -1.31131e-07, 0, 1.31131e-07, 1.1, 0, 3.27084, 0)
shape = SubResource("1")

[node name="MeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.1921e-07, 0, 1.1921e-07, 1, 0, 3.27084, 0)
mesh = SubResource("2")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.77084, 0)

[node name="Camera" type="Camera3D" parent="Head"]
fov = 90.0

[node name="Flashlight1" type="SpotLight3D" parent="Head"]
transform = Transform3D(0.996195, 0, -0.0871557, 0, 1, 0, 0.0871557, 0, 0.996195, 0.15, 0, 0)
light_color = Color(1, 0.968627, 0.866667, 1)
light_energy = 1.258
light_indirect_energy = 8.746
light_bake_mode = 0
spot_range = 10.131
spot_angle = 30.0
spot_angle_attenuation = 0.784584

[node name="Flashlight2" type="SpotLight3D" parent="Head"]
transform = Transform3D(0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, -0.15, 0, 0)
light_color = Color(1, 0.968627, 0.866667, 1)
light_energy = 1.258
light_indirect_energy = 8.746
light_bake_mode = 0
spot_range = 10.131
spot_angle = 30.0
spot_angle_attenuation = 0.784584

[node name="Shoot" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource("2_wrqnx")

[node name="Death" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource("3_7hyqs")

[node name="ShootAlt" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource("3_5higm")
